--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href= "styles.css" rel= "stylesheet" type="text/css" media="all">
+    <link href= "css/styles.css" rel= "stylesheet" type="text/css" media="all">
     <title>Our Cupcake Shop</title>
   </head>
   <body>
